# opengl_cpp

./: .clang-format  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/3d_viewer/: CMakeLists.txt  CMakePresets.json  main.cpp  window.h
examples/basic_integration_opengl/: CMakeLists.txt  CMakePresets.json  README.md  Shader.h  Texture.h  Vertex.h  Window.h  main.cpp  main_first_shaders.cpp  main_shaders_with_attributes.cpp  window.h
examples/basic_integration_opengl/first_shader/: CMakeLists.txt
examples/basic_integration_opengl/first_texture/: CMakeLists.txt  main_textures.cpp
examples/basic_integration_opengl/shader_with_attributes/: CMakeLists.txt
examples/basic_integration_opengl/shaders/fragment/: shader_with_2mix_textures.frag
examples/basic_integration_opengl/shaders/vertex/: shader_with_texture.vert  simple_vertex_shader_with_colors.vert
libs/core/window/inc/: window.h
tools/cmake/toolchains/: gcc-x86_64-linux.cmake  mingw-w64-x86_64.cmake
tools/tasks/: build.sh  clean.sh  configure.sh  run.sh
